infra/prototype/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prototype
  namespace: hivebook
  labels:
    app: prototype
spec:
  selector:
    app: prototype
  ports:
    - name: http
      port: 3000
      targetPort: http
